<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.dacas.emmclient.EmmClientMainActivity" >

    <!--
         <item
        android:id="@+id/action_add_contact"
        android:icon="@drawable/ic_action_add_contact"
        android:orderInCategory="0"
        android:title="@string/_add_contact"
        app:showAsAction="always"/>
    -->
    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_action_update"
        android:orderInCategory="1"
        android:title="@string/soft_update_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_advice"
        android:icon="@drawable/ic_action_advice"
        android:orderInCategory="2"
        android:title="@string/action_advice"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_logout"
        android:orderInCategory="3"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_config_perm"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/_action_config_perm"/>

</menu>