<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/msp_mainpage_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/msp_image_mainpage" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/bind_edit_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/login_editbox"
                android:hint="@string/input_account"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/login_editbox"
                android:hint="@string/input_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/user_login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="18sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/button_bind"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:background="@drawable/button_positive"
                android:gravity="center"
                android:onClick="bind"
                android:text="@string/bind"

                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>